<resources>
    <string name="app_name">To-Do</string>
    <string name="tasks">Tasks</string>
    <string name="done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">Theme</string>
    <string name="clear_all">Clear All</string>
    <string name="delete">Delete</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="search">Search</string>

    <!-- Log in R -->
    <string name="forget_password"> Forget Password? </string>
    <string name="login"> Log in </string>
    <string name="email"> Email </string>
    <string name="password"> Password </string>
    <string name="do_not_have"> Don\'t have an account? </string>
    <string name="create_account"> Sign Up </string>

    <!-- SignUp R -->
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="signup"> Sign Up </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Add Task R -->
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="enter_the_task_here">Enter the task here</string>
    <string name="when">When?</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="how">How?</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="tag">Tag</string>
    <string name="remainder">Remainder</string>
    <string name="task_name">Task name</string>
    <string-array name="remainderDuration">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>

</resources>