<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_sort_by_alpha_24"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sortByPriority"
                android:title="@string/sort_by_priority" />
            <item
                android:id="@+id/sortAlphabetically"
                android:title="@string/sort_alphabetically" />
            <item
                android:id="@+id/sortByDate"
                android:title="@string/sort_by_date" />
        </menu>
    </item>

    <item android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_more_vert_24">
        <menu >
            <item
                android:id="@+id/clearAll"

                android:icon="@drawable/ic_baseline_clear_all_24"
                android:title="@string/clear_all"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/delete"

                android:icon="@drawable/ic_baseline_delete_24"
                android:title="@string/delete"
                app:showAsAction="ifRoom" />

        </menu>
    </item>


</menu>