<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="214dp"
        android:layout_height="208dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="28dp" />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="292dp" />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="355dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/login"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="416dp"
        android:background="@color/login"
        android:textColor="@color/colorPrimary2"/>

    <TextView
        android:id="@+id/forget_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/do_not_have_an_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="@string/do_not_have"
            android:layout_marginRight="3dp" />

        <TextView
            android:id="@+id/sign_up_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textAlignment="gravity"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>